--- a/css/style.css
+++ b/css/style.css
@@ -41,14 +41,22 @@ main {
     background-color: white;
 }
 
+button {
+    height: 30px;
+    font-size: 12px;
+    border-radius: 5px;
+    padding: 5px 20px;
+    font-weight: 600;
+    margin: 10px 5px 10px 15px;
+}
+
 .add_task_button {
     background-color: rgb(71, 173, 240);
     border: none;
     color: white;
-    height: 30px;
-    font-size: 12px;
-    font-weight: 600;
-    border-radius: 5px;
-    padding: 5px 20px;
-    margin: 10px 10px 10px 15px;
+}
+
+.add_section_button {
+    border-color: lightgrey;
+    color: grey;
 }
