--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ header {
 
 body {
     background: lightgrey;
+    font-family:'Helvetica Neue', sans-serif;
 }
 
 main {
@@ -35,10 +36,10 @@ main {
 }
 
 .actions_bar {
-    height: 50px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     background-color: white;
+
 }
 
 button {
@@ -59,4 +60,73 @@ button {
 .add_section_button {
     border-color: lightgrey;
     color: lightgrey;
+    margin-left: 5px;
+}
+
+hr {
+   border: 2px solid lightgrey;
+}
+
+.main_menu {
+    background-color: white;
+    padding: 20px 30px;
+}
+
+span {
+    margin-bottom: 15px;
+}
+
+.new_tasks {
+    margin-bottom: 20px;
+}
+
+h2{
+    font-weight: 800;
+}
+
+.row {
+    line-height: 20px;
+}
+
+.tick {
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    color: green;
+    border: 1px solid green;
+    border-radius: 50%;
+    padding-left: 3px;
+}
+
+.cross {
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    color: red;
+    border: 1px solid red;
+    border-radius: 50%;
+    padding-left: 3px;
+}
+
+.task_tag {
+    color: white;
+    font-size: 10px;
+    padding: 5px;
+    border-radius: 15px;
+}
+
+.tag_type_editorial {
+    background-color: rgb(71, 173, 240);
+}
+
+.tag_type_q1goals {
+    background-color: rgb(155, 113, 227);
+}
+
+.tag_type_recruiting {
+    background-color: rgb(100, 192, 169);
+}
+
+.tag_type_mobile {
+    background-color: rgb(242, 158, 51);
 }
